Updated color coding for onShift Fixed bug with generation of datasource on init.

--- a/src/app/result-view/result-view.component.sass
+++ b/src/app/result-view/result-view.component.sass
@@ -11,6 +11,14 @@
     background-image: url(https://cdn.pixabay.com/photo/2019/01/01/14/55/calendar-3906791_1280.jpg)
     background-size: cover
 
+.green
+    color: #69cc69
+
+.blue
+    color: #6969cc
+
+.red
+    color: #cc6969
 table
     width: 100%
     padding: 0 16px
